tests/baselines/reference/metadataOfClassFromModule.errors.txt
metadataOfClassFromModule.ts(1,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== metadataOfClassFromModule.ts (1 errors) ====
    module MyModule {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    
        export function inject(target: any, key: string): void { }
    
        export class Leg { }
    
        export class Person {
            @inject leftLeg: Leg;
        }
    
    }